# zkholo-battleships

./: Cargo.toml  README.md  package-lock.json  package.json
circuits/: build_all.sh  consts.circom  create.circom  move.circom  package-lock.json  package.json
dnas/battleships/workdir/: dna.yaml
dnas/battleships/zomes/coordinator/battleships/: Cargo.toml
dnas/battleships/zomes/coordinator/battleships/src/: game_invite.rs  game_state.rs  game_transcript.rs  invites.rs  lib.rs  ship_deployment.rs  ship_deployment_proof.rs
dnas/battleships/zomes/integrity/battleships/: Cargo.toml
dnas/battleships/zomes/integrity/battleships/src/: constants.rs  game_invite.rs  game_transcript.rs  groth16.rs  helpers.rs  hit_or_miss_proof.rs  lib.rs  ship_deployment.rs  ship_deployment_proof.rs
tests/src/battleships/battleships/: common.ts  game-invite.test.ts  my-incoming-invites.test.ts  ship-placements-proof.test.ts  ship-placements.test.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: holochain-app.ts
ui/src/battleships/battleships/: circuits  constants.ts  copy-agent-pub-key.ts  create-game-invite.ts  create-ship-deployment.ts  game-board-pair.ts  game-board.ts  game-dialog.ts  game-invite-detail.ts  helpers.ts  invite-list-item.ts  invite-list.ts  new-game-dialog.ts  ship-placements-detail.ts  ship-placements-proof-detail.ts  types.ts
workdir/: happ.yaml  web-happ.yaml
