[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3"
hdk = "=0.1.3"
serde = "1"

[workspace.dependencies.battleships]
path = "dnas/battleships/zomes/coordinator/battleships"

[workspace.dependencies.battleships_integrity]
path = "dnas/battleships/zomes/integrity/battleships"
